# book-writer

./: .gitignore  ORGANIZER_GUIDE.md  ORGANIZER_SUMMARY.md  QWEN.md  README.md  book_config.yaml  main.py  pyproject.toml  requirements.txt  test_ollama_models.py  test_organizer.py
.emergent/: emergent.yml
.semindex/: semindex.db
ai/: book_config.yaml
ai/content/: aaba2003-39e9-4e03-a2da-7642dd65337f.json  c1237317-2143-4c09-b343-2315f8de09d7.json
ai/db/: chroma.sqlite3
ai/notes/: 4b3d425a-b239-4166-80c6-0fdd6463dfca.json  6848b4b2-c530-442b-8ba7-4271d6e547f5.json  884ae7e9-24a3-455f-b46b-2081ab6cc0db.json  a6462a73-a7ce-4f72-b2d0-6e0be823ce31.json  b55d5997-85c1-4060-b963-8fae146a9336.json
ai/outlines/: understanding_artificial_intelligence.yaml
ai/output/: understanding_artificial_intelligence_1759566119.md  understanding_artificial_intelligence_1759570225.md
backend/: .env  server.py
book_writer/: __init__.py  app.py  book_assembly.py  config.py  content_expansion.py  content_organizer_ui.py  export.py  model_config.yaml  model_manager.py  modular_assembly.py  nlp_classifier.py  note_processor.py  organized_content.py  outline.py  rag_writing.py  relationship_visualizer.py  response_handler.py  tool_registry.py  ui.py
db/: chroma.sqlite3
frontend/: .env
frontend/src/: App.css  App.js
test/: book_config.yaml
test/content/: 26fd5ee8-e01e-41e8-b020-9ab273906b8d.json  8bf124ef-4d5e-4500-b554-d3aa9a9f9255.json  9a4241d4-6f9e-4585-b0ad-3c7968052ea7.json  bdaee8fe-5c48-4ad1-8c0a-9bdacc53d90b.json  c335d300-2654-4986-982d-338bfe7ab29a.json  (+1 more)
(+11 files in other folders)
